Add Google site verification meta tag

--- a/hytale-casino (5).html
+++ b/hytale-casino (5).html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="QoOLY_V9pXr_zGPAe6UhjAV0h4RXPfl6Og9asPBq64I" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HYTALE.BET - Fantasy Casino Gaming Platform</title>
